add PageQueryScope and PageFilter
